@@ -1,5 +1,6 @@
 Changelog for Discuss.
 
+- Add new discuss.user.new_replies and discuss.user.unread_posts placeholders
 - #6584 Fix fatal error on messages/view and improve session place behavior for messages
 - Add ability to customize separator between subboards through theme's manifest.php
 - Fix overridden disUser.toArray and add posts_formatted placeholder.
